# cds-votable-rust

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: clitest.yml  deploy.yml  deploy_aarch64.yml  libtest.yml  release.yml  wasmtest.yml
crates/cli/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
crates/cli/doc/: vot.1.txt.tpl
crates/cli/resource/: test_edit.bash  test_edit.td.xml
crates/cli/src/: convert.rs  edit.rs  get.rs  hcidx.rs  hpxsort.rs  input.rs  lib.rs  main.rs  output.rs  qhcidx.rs  streaming.rs  update.rs  wrappedelems.rs
crates/cli/src/visitors/: colnames.rs  fieldarray.rs  mod.rs  update.rs  viz_org_names.rs  votstruct.rs
crates/wasm/: CHANGELOG.md  Cargo.toml  README.md  index.html
crates/wasm/src/: lib.rs
resources/: TS_gaia_ESAC.xml  VII.vot  binary.b264  binary.b64  convert_lm.py  dataLink_003.xml  example_vodml.xml  gaia_dr3.b264  gaia_dr3.b64  mivot_appendix_A.xml  obscore.vot  sdss12.json  sdss12.vot  simbad_unicodechar.xml  stilts_all_but_k_test.expect.2.vot  stilts_all_but_k_test.expect.3.vot  stilts_all_but_k_test.expect.vot  stilts_all_but_k_test.vot  unicode.vot  vot_utf8_array_dt.xml  vot_with_cdata.vot  vot_with_definitions.vot  vot_with_empty_prec.vot  votable_to_json.json  votable_to_json.xml
resources/mivot/: example_vodml.xml  gaia_luhman16_astropy.xml
resources/mivot/1/: test_1_ko_1.10.xml  test_1_ko_1.11.xml  test_1_ko_1.5.xml  test_1_ko_1.6.xml  test_1_ko_1.7.xml  test_1_ok_1.1.xml  test_1_ok_1.2.xml  test_1_ok_1.3.xml  test_1_ok_1.4.xml  test_1_ok_1.8.xml
resources/mivot/10/: test_10_ko_10.1.xml  test_10_ko_10.10.xml  test_10_ko_10.5.xml  test_10_ko_10.6.xml  test_10_ko_10.7.xml  test_10_ko_10.8.xml  test_10_ko_10.9.xml  test_10_ok_10.11.xml  test_10_ok_10.2.xml  test_10_ok_10.3.xml  test_10_ok_10.4.xml
resources/mivot/11/: test_11_ko_11.3.xml  test_11_ko_11.4.xml  test_11_ko_11.5.xml  test_11_ko_11.6.xml  test_11_ko_11.7.xml  test_11_ok.xml  test_11_ok_11.1.xml  test_11_ok_11.2.xml  test_11_ok_11.8.xml
resources/mivot/12/: test_12_ko_12.2.xml  test_12_ko_12.3.xml  test_12_ok.xml  test_12_ok_12.1.xml
resources/mivot/13/: test_13_ko_13.2.xml  test_13_ko_13.3.xml  test_13_ko_13.4.xml
resources/mivot/14/: test_14_ko_14.3.xml  test_14_ok_14.1.xml  test_14_ok_14.2.xml  test_14_ok_14.3.xml
resources/mivot/2/: test_2_ko_2.5.xml  test_2_ok_2.2.xml
resources/mivot/3/: test_3_ko_3.6.xml  test_3_ok_3.1.xml  test_3_ok_3.2.xml  test_3_ok_3.3.xml  test_3_ok_3.4.xml  test_3_ok_3.5.xml
resources/mivot/4/: test_4_ko_4.3.xml  test_4_ko_4.4.xml  test_4_ko_4.7.xml  test_4_ko_4.9.xml  test_4_ok_4.1.xml  test_4_ok_4.2.xml  test_4_ok_4.5.xml  test_4_ok_4.6.xml  test_4_ok_4.8.xml
resources/mivot/5/: test_5_ko_5.1.xml  test_5_ko_5.2.xml  test_5_ko_5.29.xml  test_5_ko_5.42.xml  test_5_ko_5.43.xml  test_5_ko_5.44.xml  test_5_ko_5.45.xml  test_5_ko_5.46.xml  test_5_ko_5.47.xml  test_5_ko_5.48.xml  test_5_ko_5.57.xml  test_5_ko_5.59.xml  test_5_ko_5.7.xml  test_5_ko_5.8.xml  test_5_ko_5.9.xml  test_5_ok_5.3.xml  test_5_ok_5.4.xml  test_5_ok_5.40.xml  test_5_ok_5.41.xml  test_5_ok_5.5.xml  test_5_ok_5.50.xml  test_5_ok_5.51.xml  test_5_ok_5.52.xml  test_5_ok_5.53.xml  test_5_ok_5.54.xml  test_5_ok_5.55.xml  test_5_ok_5.56.xml  test_5_ok_5.58.xml  test_5_ok_5.6.xml
resources/mivot/6/: test_6_ko_6.10.xml  test_6_ko_6.11.xml  test_6_ko_6.14.xml  test_6_ko_6.3.xml  test_6_ko_6.4.xml  test_6_ko_6.5.xml  test_6_ko_6.6.xml  test_6_ko_6.7.xml  test_6_ko_6.9.xml  test_6_ok_6.1.xml  test_6_ok_6.12.xml  test_6_ok_6.13.xml  test_6_ok_6.2.xml  test_6_ok_6.8.xml
resources/mivot/7/: test_7_ko_7.10.xml  test_7_ko_7.11.xml  test_7_ko_7.12.xml  test_7_ko_7.13.xml  test_7_ko_7.15.xml  test_7_ko_7.16.xml  test_7_ko_7.22.xml  test_7_ko_7.4.xml  test_7_ko_7.8.xml  test_7_ko_7.9.xml  test_7_ok_7.1.xml  test_7_ok_7.14.xml  test_7_ok_7.17.xml  test_7_ok_7.18.xml  test_7_ok_7.19.xml  test_7_ok_7.2.xml  test_7_ok_7.20.xml  test_7_ok_7.21.xml  test_7_ok_7.3.xml  test_7_ok_7.5.xml  test_7_ok_7.6.xml  test_7_ok_7.7.xml
resources/mivot/8/: test_8_ko_8.10.xml  test_8_ko_8.11.xml  test_8_ko_8.12.xml  test_8_ko_8.13.xml  test_8_ko_8.14.xml  test_8_ko_8.2.xml  test_8_ko_8.20.xml  test_8_ko_8.21.xml  test_8_ko_8.22.xml  test_8_ko_8.23.xml  test_8_ko_8.24.xml  test_8_ko_8.25.xml  test_8_ko_8.26.xml  test_8_ko_8.3.xml  test_8_ko_8.5.xml  test_8_ko_8.8.xml  test_8_ko_8.9.xml  test_8_ok.xml  test_8_ok_8.1.xml  test_8_ok_8.15.xml  test_8_ok_8.16.xml  test_8_ok_8.17.xml  test_8_ok_8.18.xml  test_8_ok_8.19.xml  test_8_ok_8.4.xml  test_8_ok_8.6.xml  test_8_ok_8.7.xml
resources/mivot/9/: test_9_ko_9.2.xml  test_9_ko_9.3.xml  (+8 more)
resources/snippets/: README.md  test_10_ko_10.1.xml  test_10_ko_10.5.xml  test_10_ko_10.6.xml  test_10_ko_10.7.xml  test_10_ko_10.8.xml  test_10_ok.xml  test_11_ko_11.4.xml  test_11_ko_11.6.xml  test_11_ko_11.7.xml  test_12_ko_12.2.xml  test_13_ko_13.1.xml  test_13_ko_13.5.xml  test_13_ok.xml  test_1_ko_1.10.xml  test_1_ko_1.11.xml  test_1_ko_1.5.xml  test_1_ko_1.6.xml  test_1_ko_1.7.xml  test_1_ok_1.1.xml  test_1_ok_1.2.xml  test_1_ok_1.3.xml  test_1_ok_1.4.xml  test_1_ok_1.8.xml  test_1_ok_1.9.xml  test_2_ko_2.3.xml  test_2_ko_2.4.xml  test_2_ko_2.5.xml  test_2_ok.xml  test_2_ok_2.1.xml  test_3_ko_3.6.xml  test_3_ok_3.1.xml  test_3_ok_3.2.xml  test_3_ok_3.3.xml  test_3_ok_3.4.xml  test_3_ok_3.5.xml  test_4_ko_4.3.xml  test_4_ko_4.4.xml  test_4_ko_4.7.xml  test_4_ko_4.9.xml  (+61 more)
src/: coosys.rs  datatype.rs  definitions.rs  desc.rs  error.rs  field.rs  fieldref.rs  group.rs  info.rs  lib.rs  link.rs  macros.rs  param.rs  paramref.rs  resource.rs  table.rs  timesys.rs  utils.rs  values.rs  vodml.rs  votable.rs
src/data/: binary.rs  binary2.rs  fits.rs  mod.rs  stream.rs  tabledata.rs
src/impls/: b64.rs  mem.rs  mod.rs  seeds.rs  visitors.rs
src/iter/: elems.rs  mod.rs  strings.rs
src/mivot/: attribute.rs  attribute_a.rs  attribute_b.rs  attribute_c.rs  collection.rs  foreignkey.rs  globals.rs  globalsInstance.rs  instance.rs  join.rs  macros.rs  mod.rs  model.rs  primarykey.rs  reference.rs  report.rs  templates.rs  vodml.rs  where.rs
(+33 files in other folders)
