[package]
name = "votable"
version = "0.2.3"
authors = [
  "F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>",
  "T. Dumortier <thibault.dumortier@astro.unistra.fr>"
]
description = """
Rust implementation of a VOTable serializer/deserializer with support for
format other than XML, such as JSON, TOML or YAML.
"""
license = "Apache-2.0 OR MIT"
readme = "README.md"
categories = ["encoding", "science"]
keywords = ["ivoa", "votable", "xml", "json", "toml"]
documentation = "https://docs.rs/votable"
homepage = "https://github.com/cds-astro/cds-votable-rust/"
repository = "https://github.com/cds-astro/cds-votable-rust/"
edition = "2021"
exclude = [
  "resources",
]

[lib]
name = "votable"
path = "src/lib.rs"
test = true
doctest = true
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "crates/cli",
]
exclude = ["crates/wasm"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.4"
paste = "1.0" # To create new identifier in macro
quick-xml = "0.23"
# quick-xml = { version = "0.23", features = [ "serialize" ] }
serde_json = { version = "1.0", features = ["preserve_order", "float_roundtrip"] }
serde_yaml = "0.9"
toml = "0.5"
quick-error = "2.0" # To handke error more easily
base64 = "0.21"
ucs2 = "0.3"
bitvec = { version = "1", features = ["std", "alloc", "serde"] }

# See opti here: https://github.com/johnthagen/min-sized-rust
[profile.release]
# strip = true  # Automatically strip symbols from the binary (nightly feature :o/ ).
lto = true    # Optimize at the link stage (may remove dead code)
codegen-units = 1
panic = "abort"

