[package]
name = "votable-cli"
version = "0.6.0"
authors = ["F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]
description = "Command-line to extract information from IVOA VOTables and to convert VOTable  back and forth in XML, JSON, YAML, TOML (and to CSV) while preserving all elements (except in CSV)."
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities", "science", "data-structures"]
keywords = ["ivoa", "votable", "xml"]
documentation = "https://github.com/cds-astro/cds-votable-rust/tree/main/crates/cli"
homepage = "https://github.com/cds-astro/cds-votable-rust/tree/main/crates/cli"
repository = "https://github.com/cds-astro/cds-votable-rust/tree/main/crates/cli"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "vot"
bench = false
test = false

[dependencies]
votable = { package = "votable", path = "../..", features = ["mivot"] }
clap = { version = "4.5", features = ["derive"] }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
env_logger = "0.11"
crossbeam = "0.8"
serde = "1.0"


[features]
default = []

# Provides VizieR specific functionalities 
vizier = []

[package.metadata.deb]
maintainer = "F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/vot", "usr/bin/vot", "755"],
    ["COPYING", "usr/share/doc/vot/", "644"],
    ["LICENSE-MIT", "usr/share/doc/vot/", "644"],
    ["LICENSE-APACHE", "usr/share/doc/vot/", "644"],
    ["CHANGELOG.md", "usr/share/doc/vot/CHANGELOG", "644"],
    ["README.md", "usr/share/doc/vot/README", "644"],
    #["FAQ.md", "usr/share/doc/vot/FAQ", "644"],
    ["doc/vot.1", "usr/share/man/man1/vot.1", "644"],
    # Similarly for shell completions.
    #["deployment/deb/vot.bash", "usr/share/bash-completion/completions/vot", "644"],
    #["deployment/deb/vot.fish", "usr/share/fish/vendor_completions.d/vot.fish", "644"],
    #["deployment/deb/_vot", "usr/share/zsh/vendor-completions/", "644"],
]
extended-description = """\
vot is a command-line to convert VOTable is various formats such as JSON, TOML and YAML and back to XML
"""
