[package]
name = "votable-cli"
version = "0.6.1"
authors = ["F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]
description = "Command-line to extract/edit metadata from IVOA VOTables and to convert efficiently VOTable back and forth in XML-TABLEDATA, XML-BINARY, XML-BINARY2, non-standard JSON/YAML/TOML (and to CSV)."
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities", "science", "data-structures"]
keywords = ["ivoa", "votable", "xml"]
documentation = "https://github.com/cds-astro/cds-votable-rust/tree/main/crates/cli"
homepage = "https://github.com/cds-astro/cds-votable-rust/tree/main/crates/cli"
repository = "https://github.com/cds-astro/cds-votable-rust/tree/main/crates/cli"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "vot"
bench = false
test = false

[dependencies]
votable = { package = "votable", path = "../..", features = ["mivot"] }
clap = { version = "4.5", features = ["derive"] }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
env_logger = "0.11"
crossbeam = "0.8"
serde = "1.0"


[features]
default = []

# Provides VizieR specific functionalities 
vizier = []

[package.metadata.deb]
maintainer = "F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/vot", "usr/bin/vot", "755"],
    ["COPYING", "usr/share/doc/vot/", "644"],
    ["LICENSE-MIT", "usr/share/doc/vot/", "644"],
    ["LICENSE-APACHE", "usr/share/doc/vot/", "644"],
    ["CHANGELOG.md", "usr/share/doc/vot/CHANGELOG", "644"],
    ["README.md", "usr/share/doc/vot/README", "644"],
    ["doc/vot.1", "usr/share/man/man1/vot.1", "644"],
]
extended-description = """\
Command-line to extract/edit metadata from IVOA VOTables and to convert efficiently VOTable back and forth in XML-TABLEDATA, XML-BINARY, XML-BINARY2, non-standard JSON/YAML/TOML (and to CSV).
"""
