# Enrich using https://www.maturin.rs/metadata.html
[project]
name = "votable-cli"
classifiers = [
    "Programming Language :: Rust",
]

[project.urls]
repository = "https://github.com/cds-astro/cds-votable-rust/tree/main/crates/cli"

[build-system]
requires = ["maturin>=0.17"]
build-backend = "maturin"

[tool.maturin]
sdist-include = ["README.md"]
# Bindings type
bindings = "bin"
# Strip the library for minimum file size
strip = true
# Build artifacts with the specified Cargo profile
profile = "release"
# Cargo manifest path
# manifest-path = "Cargo.toml"
# Require Cargo.lock and cache are up to date
frozen = false
# Require Cargo.lock is up to date
locked = false

